--- a/voting-app/postgress-pod.yaml
+++ b/voting-app/postgress-pod.yaml
@@ -13,7 +13,6 @@ spec:
         - containerPort: 5432
       env:
         - name: POSTGRES_USER
-          value: postgres
+          value: "postgres"
         - name: POSTGRES_PASSWORD
           value: "postgres"
-          
