--- a/demo-defination-files/service.yaml
+++ b/demo-defination-files/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-service
+  name: webapp-service
 spec:
   type: NodePort
   ports:
-    - port: 80
-      targetPort: 80
-      nodePort: 30002
+    - port: 8080
+      targetPort: 8080
+      nodePort: 30080
   selector:
-      type: appli
+      name: simple-webapp
